fixed input button alignment

--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -35,6 +35,7 @@
 #sendMessage{
     width: 21.5%;
     height: 10%;
+    float: right;
 }
 
 #inputHolder{
